# dot-counter

./: README.md  pyproject.toml
input/demo/: red_dot_counts_sorted.csv
ipynb/: plot_red_dots.ipynb
notebooks/: plot_red_dots.ipynb
src/: red_dot_count.py  red_dot_count.rs  tiff_compression.py
src/dot_counter/: count.py  tiff_compression.py
