[project]
name = "count-reddot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imagecodecs>=2024.9.22",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tifffile>=2024.9.20",
]

[dependency-groups]
dev = [
    "uv>=0.5.5",
]
